--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,29 +3,24 @@
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #c6c9cf;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #ececec;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #36C9C6;
 }
 
 @keyframes App-logo-spin {
